13/8/17
  Minor fixes for window mappings and code cleanup

21/8/16
  Apps started before the window manager are now managed
  Minimum window size set in rc.conf

1/7/16
  Quit if no keys file found...

9/4/16
  Added function last_win() to focus the last focused window with
   a keyboard shortcut
  Added option to sticky the focused window on unfocused desktops
   with a keyboard shortcut
  Fix for transient window bug in multiple monitor mode

23/11/15
  Fix for keyboards shortcuts using Alt failing
  Fix for window not unmapping with client_to_desktop
  Fix for popping a window back with one window in fullscreen mode

16/11/15
  Modifying key ALTSuper changed to AltSuper for consistency
  One value for DEFAULTMODE sets all desktops to that mode
  Added man page

19/9/15
  No useless gaps in fullscreen mode

29/8/15
  Fix for xsetroot fail

18/7/15
  Xrandr capabilities added. Plug'n'play monitors
  SHOW_BAR in rc.conf can now be set for each desktop
  Useless gaps can be set around windows and the bar
   in rc.conf
  Can float a window in a tiling mode or pop it back in
   with a keyboard shortcut
  Can set a window to start out floating in apps.conf
  Improvements in fullscreen mode

5/3/14
  Point update [ 1.0.6 ]
  Better window management - can cycle through all windows - transients
   included
  Minimum size for window when resizing in stacking mode
  Add new function "terminate" for keyboard shortcut to
   close any open windows, exit the window manager and shutdown(1)
   or reboot(2)
  Fix for kill_client() when window has save dialog
  Add option BAR_SHORT to rc.conf to shorten the bar's 
   length to have room for an external app
  Add option in rc.conf to select which desktop to start on
  Right click an unfocused desktop in the switcher to move
   the focused window to that desktop

6/10/13
  Point update [ 1.0.5 ]
  Option to have the bar transparent when running a compositor
  Fix for failed start when Xinerama info isn't available

17/9/13