@@ -222,7 +222,7 @@ static unsigned int showopen;        // whether the desktop switcher shows numbe
 static unsigned int topbar, top_stack, windownamelength, keycount, cmdcount, dtcount, pcount, tcount, LA_WINDOWNAME;
 static unsigned int minww, minwh, ug_out, ug_in, ug_bar;
 static int ufalpha, baralpha;
-static unsigned long opacity, baropacity;
+static unsigned long opacity, baropacity, plugnplaycount;
 static int xerror(Display *dis, XErrorEvent *ee);
 static int (*xerrorxlib)(Display *, XErrorEvent *);
 unsigned int numlockmask, resizemovekey;        /* dynamic key lock mask */
@@ -371,9 +371,9 @@ void remove_client(client *cl, unsigned int dr) {
             }
         }
     } else focus = current = NULL;
-    if(numwins == 0) current = NULL;
+    if(numorder == 0) current = NULL;
     if(dr == 0) free(cl);
-    if((numwins - nmaster) < 3) growth = 0;
+    if((numwins - nmaster) < 2) growth = 0;
     save_desktop(current_desktop);
     return;
 }
@@ -498,7 +498,7 @@ void pop_window() {
         focus->trans = 1;
         XMoveResizeWindow(dis, focus->win, desktops[current_desktop].x+focus->x, focus->y, focus->w, focus->h);
         numwins -= 1;
-        if((numwins - nmaster) < 3) growth = 0;
+        if((numwins - nmaster) < 2) growth = 0;
         if(focus == current) {
             for(i=0;i<numorder;++i) {
                 for(c=head;c;c=c->next)
@@ -615,6 +615,7 @@ void change_desktop(const Arg arg) {
 
     // Take "properties" from the new desktop
     select_desktop(arg.i);
+    XSetInputFocus(dis, root, RevertToPointerRoot, CurrentTime);
 
     // Map all windows
     if(head != NULL) {
@@ -679,12 +680,13 @@ void client_to_desktop(const Arg arg) {
         add_window(c->win, c->trans, c, c->x, c->y, c->w, c->h);
         save_desktop(arg.i);
 
-        if(c->trans == 1) XMoveResizeWindow(dis, c->win,
-          desktops[current_desktop].x+c->x,c->y,c->w,c->h);
         for(j=cd;j<cd+num_screens;++j) {
             if(view[j%num_screens].cd == arg.i) {
                 if(c->trans == 0) {
                     tile();
+                } else {
+                    XMoveResizeWindow(dis, c->win,
+                        desktops[current_desktop].x+c->x,c->y,c->w,c->h);
                 }
             }
         }
@@ -1182,6 +1184,10 @@ void check_start() {
 }
 
 void plugnplay(XEvent *e) {
+    if(plugnplaycount == 0) {
+        ++plugnplaycount;
+        return;
+    }
     client *c; unsigned int tmp = current_desktop;
     XRRUpdateConfiguration(e);
     if(font.fontset) XFreeFontSet(dis, font.fontset);
@@ -1299,7 +1305,7 @@ void setup() {
     resizemovekey = Mod1Mask;
     windownamelength = 35;
     show_bar = STATUS_BAR = barmon = barmonchange = lessbar = 0;
-    minww = minwh = ug_out = ug_in = ug_bar = 0;
+    minww = minwh = ug_out = ug_in = ug_bar = plugnplaycount = 0;
 
     char *loc;
     loc = setlocale(LC_ALL, "");
@@ -1313,6 +1319,7 @@ void setup() {
     read_rcfile();
 
     // Set up all desktops
+    init_start();
     init_desks();
 
     if(STATUS_BAR == 0) {
@@ -1335,10 +1342,9 @@ void setup() {
         Arg a = {.i = default_desk};
         change_desktop(a);
     }
-    init_start();
     check_start();
-    update_current();
     setbaralpha();
+    update_current();
 
     logger("\033[0;32mWe're up and running!", "");
 }
