@@ -1,3 +1,9 @@
+27/10/17
+  Fix for changing to empty desktop leaving the last focused window
+   with focus
+  Ignore the first Randr event
+  Fix for popped windows not unmapping with client_to_desktop()
+
 13/8/17
   Minor fixes for window mappings and code cleanup
 
